--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,6 +11,7 @@ spring.datasource.username=postgres
 spring.datasource.password=1234
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.jpa.database=postgresql
-spring.jpa.database-platform = org.hibernate.dialect.PostgreSQL11Dialect
+# у меня была ошибка при запуске
+spring.jpa.database-platform = org.hibernate.dialect.PostgreSQLDialect 
 
 logging.level.= INFO
