--- a/pom.xml
+++ b/pom.xml
@@ -54,18 +54,7 @@
             <scope>provided</scope>
         </dependency>
 
-        <!-- Hibernate -->
-        <dependency>
-            <groupId>org.hibernate</groupId>
-            <artifactId>hibernate-core</artifactId>
-            <version>4.1.4.Final</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.hibernate</groupId>
-            <artifactId>hibernate-entitymanager</artifactId>
-            <version>5.2.3.Final</version>
-        </dependency>
+        <!-- Java XML Bind -->
 
         <dependency>
             <groupId>javax.xml.bind</groupId>
@@ -83,6 +72,5 @@
             </plugin>
         </plugins>
     </build>
-
 
 </project>
